cabal-version:   3.0
name:            moskstraumen
version:         0.0.0

-- synopsis:
-- description:
license:         BSD-2-Clause
license-file:    LICENSE
author:          Stevan A
maintainer:      stevana@users.noreply.github.com

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-dir:        data
data-files:      chain.json

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Moskstraumen.Codec
    Moskstraumen.Effect
    Moskstraumen.Error
    Moskstraumen.EventLoop2
    Moskstraumen.Example.Amaru
    Moskstraumen.Example.Broadcast
    Moskstraumen.Example.CRDT.GSet
    Moskstraumen.Example.Echo
    Moskstraumen.Example.KeyValueStore
    Moskstraumen.Example.Raft
    Moskstraumen.FakeTime
    Moskstraumen.FreeMonad
    Moskstraumen.Generate
    Moskstraumen.Heap
    Moskstraumen.LinearTemporalLogic
    Moskstraumen.Marshal
    Moskstraumen.Message
    Moskstraumen.Node4
    Moskstraumen.NodeHandle
    Moskstraumen.NodeId
    Moskstraumen.Parse
    Moskstraumen.Prelude
    Moskstraumen.Pretty
    Moskstraumen.Random
    Moskstraumen.Runtime.TCP
    Moskstraumen.Runtime2
    Moskstraumen.Shrink
    Moskstraumen.Simulate
    Moskstraumen.Time
    Moskstraumen.TimerWheel2
    Moskstraumen.VarId
    Moskstraumen.Workload

  other-modules:      Paths_moskstraumen
  default-extensions:
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    StrictData

  -- NOTE: GHC 9.2 is needed for OverloadedRecordDot and
  -- OverloadedRecordUpdate, and that version uses base 4.16.
  build-depends:
    , aeson       >=2.0.2.0
    , base        >=4.16
    , bytestring
    , containers
    , heaps
    , mtl
    , network
    , process
    , random
    , scientific
    , stm
    , text
    , time
    , vector

  hs-source-dirs:     src
  default-language:   Haskell2010

executable echo
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , moskstraumen

  hs-source-dirs:   app/echo
  default-language: Haskell2010

executable broadcast
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , moskstraumen

  hs-source-dirs:   app/broadcast
  default-language: Haskell2010

executable gset
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , moskstraumen

  hs-source-dirs:   app/gset
  default-language: Haskell2010

executable kvstore
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , moskstraumen

  hs-source-dirs:   app/kvstore
  default-language: Haskell2010

executable raft
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , moskstraumen

  hs-source-dirs:   app/raft
  default-language: Haskell2010

test-suite test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , moskstraumen
    , tasty
    , tasty-hunit
